--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
-#screen {
-  width: 100%;
-  height: 100px;
-  background-color: grey;
-}
-#calc-body {
+html {
   background-color: darkorchid;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#calc-body {
+  --radius: 20px;
+  --border: 10px;
+  border-radius: calc(var(--radius) + var(--border));
+  border: 9px solid black;
+  background: rgb(2, 103, 143);
+  background: radial-gradient(
+    circle,
+    rgba(2, 103, 143, 1) 50%,
+    rgba(18, 48, 130, 1) 100%
+  );
   margin: auto;
   width: 600px;
   height: 800px;
   display: grid;
 }
 
-button {
-  background-color: antiquewhite;
-  width: 100%;
-  height: 150px;
-  border: solid 1px black;
-  border-radius: 5px;
-  transition: transform 0.1s;
-}
+#screen {
+  background-color: rgb(205, 205, 205);
+  height: 200px;
+  margin: var(--border);
+  border-radius: var(--radius);
+  border: 7px solid black;
+  font-size: 3em;
 
-button:active {
-  transform: scale(0.98);
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: baseline;
+}
+#screen-text {
+  margin-left: auto;
+  margin-right: 10px;
 }
 
 #buttons-container {
@@ -32,10 +46,34 @@ button:active {
   align-items: baseline;
 }
 
-table {
-  width: 100%;
+.buttons {
+  margin: auto;
 }
 
-tr {
-  width: 100%;
+button {
+  background-color: rgb(205, 205, 205);
+  color: rgb(40, 40, 40);
+
+  width: 1.8em;
+  height: 35%;
+  border: 5px solid black;
+  border-radius: var(--radius);
+  transition: transform 0.1s;
+  font-size: 5em;
+}
+
+button:active {
+  transform: scale(0.97);
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+#btn-\= {
+  align-items: right;
+}
+
+.btn-empty {
+  display: none;
 }
