Addition and Subtraction added

--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ html {
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
-  align-items: baseline;
+  text-align: right;
 }
+
 #screen-text {
   margin-left: auto;
   margin-right: 10px;
