--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ html {
 #screen {
   background-color: rgb(205, 205, 205);
   height: 200px;
+  /* width: 580px; */
+  /* position: fixed; */
   margin: var(--border);
   border-radius: var(--radius);
   border: 7px solid black;
@@ -36,7 +38,8 @@ html {
 
 #screen-text {
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 #buttons-container {
